--- a/giftr/platforms/ios/www/index.html
+++ b/giftr/platforms/ios/www/index.html
@@ -5,13 +5,15 @@
     <title>GIFTR</title>
 	<link href="css/main.css" rel="stylesheet"/>
 	<script src="js/app.js"></script>
+	<script src="js/hammer.min.js"></script>
 </head>
-<body>
+<body onload="app.onDeviceReady()">
 	<div class="wrapper">
 		<!-- container for all pages -->
 		
 		<section data-role="page" id="people-list">
-			<h2>People <button class="btnAdd">+</button></h2>
+			<h2 style="margin-left:0px;">People</h2>
+			<img src="img/add.svg" class="btnAdd"/>
 			<p class="details">
 			Here are all the people for which <em>you</em> buy gifts.
 			</p>
@@ -25,7 +27,9 @@
 		</section>
 		
 		<section data-role="page" id="occasion-list">
-			<h2>Occasions <button class="btnAdd">+</button></h2>
+			<img src="img/back.svg" class="btnBack"/>
+			<h2>Occasions</h2>
+			<img src="img/add.svg" class="btnAdd"/>
 			<p class="details">
 			Here is the list of occasions when <em>you</em> buy gifts.
 			</p>
@@ -39,7 +43,9 @@
 		</section>
 		
 		<section data-role="page" id="gifts-for-person">
-			<h2>Gift Ideas <button class="btnAdd">+</button></h2>
+			<img src="img/back.svg" class="btnBack"/>
+			<h2>Gift Ideas</h2>
+			<img src="img/add.svg" class="btnAdd"/>
 			<p class="details">
 			Here are all the gifts ideas for <span>PERSON</span> for all occasions.
 			</p>
@@ -53,7 +59,9 @@
 		</section>
 		
 		<section data-role="page" id="gifts-for-occasion">
-			<h2>Gift Ideas <button class="btnAdd">+</button></h2>
+			<img src="img/back.svg" class="btnBack"/>
+			<h2>Gift Ideas</h2>
+			<img src="img/add.svg" class="btnAdd"/>
 			<p class="details">
 			Here are all the gift ideas for <span>OCCASION</span> for all people.
 			</p>
@@ -71,8 +79,8 @@
 	<div data-role="overlay">&nbsp;</div>
 	
 	<!-- modal for adding an entry to person or occasion table -->
-	<div data-role="modal" id="add-person-occasion">
-		<h3>Title (new person | occasion)</h3>
+	<div data-role="modal" id="add-person">
+		<h3>Add a new person</h3>
 		<form>
 			<div class="formBox">
 				<input type="text" id="new-per-occ" value="" placeholder="" class=""/>
@@ -84,18 +92,62 @@
 		</form>	
 	</div>
 	
-	<!-- modal for adding an entry to gift idea table. Requires a person or occasion plus the idea -->
-	<div data-role="modal" id="add-gift">
-		<h3>Title (new gift for person | occasion)</h3>
+	<div data-role="modal" id="add-occasion">
+		<h3>Add a new occasion</h3>
+		<form>
+			<div class="formBox">
+				<input type="text" id="new-per-occ" value="" placeholder="" class=""/>
+			</div>
+			<div class="formBox">
+				<input type="button" class="btnCancel" value="CANCEL" />
+				<input type="button" class="btnSave" value="SAVE" />
+			</div>
+		</form>	
+	</div>
+	
+	<div data-role="modal" id="person-gift">
+		<h3>New gift for person</h3>
 		<form>
 			<div class="formBox">
 				<select id="list-per-occ">
 					<option value="0">Choose one</option>
-					<!-- list of options built from person list or occasion list -->
 				</select>
 			</div>
 			<div class="formBox">
 				<input type="text" id="new-idea" value="" placeholder="" class=""/>
+			</div>
+			<div class="formBox">
+				<input type="button" class="btnCancel" value="CANCEL" />
+				<input type="button" class="btnSave" value="SAVE" />
+			</div>
+		</form>	
+	</div>
+	
+	<div data-role="modal" id="occasion-gift">
+		<h3>New gift for occasion</h3>
+		<form>
+			<div class="formBox">
+				<select id="list-per-occ">
+					<option value="0">Choose one</option>
+				</select>
+			</div>
+			<div class="formBox">
+				<input type="text" id="new-idea" value="" placeholder="" class=""/>
+			</div>
+			<div class="formBox">
+				<input type="button" class="btnCancel" value="CANCEL" />
+				<input type="button" class="btnSave" value="SAVE" />
+			</div>
+		</form>	
+	</div>
+	
+	<!-- modal for adding gift purchase status -->
+	<div data-role="modal" id="gift-status">
+		<h3>Have you purchased this gift?</h3>
+		<form>
+			<div class="formBox">
+				<input type="radio" id="radioy" name="yes-no" value="1">YES
+				<input type="radio" id="radion" name="yes-no" value="0" checked>NO
 			</div>
 			<div class="formBox">
 				<input type="button" class="btnCancel" value="CANCEL" />
